--- a/public/preview.html
+++ b/public/preview.html
@@ -1,230 +1,214 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>VidGen</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8" />
+<title>Video Card Generator</title>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <style>
 body {
   background:#0f172a;
   color:#e5e7eb;
-  font-family:system-ui;
+  font-family:system-ui,-apple-system;
+  margin:0;
+  padding:20px;
   display:flex;
   justify-content:center;
-  padding:20px;
 }
 .app {
-  max-width:1100px;
   width:100%;
+  max-width:960px;
   background:#020617;
-  padding:20px;
   border-radius:16px;
+  padding:20px;
 }
 .grid {
   display:grid;
   grid-template-columns:1fr 1fr;
   gap:20px;
 }
-@media(max-width:900px){.grid{grid-template-columns:1fr}}
+@media (max-width:900px) {
+  .grid { grid-template-columns:1fr; }
+}
 .panel {
   border:1px solid #1e293b;
   border-radius:14px;
   padding:16px;
 }
 label {
+  display:block;
+  margin-top:12px;
   font-size:13px;
   color:#94a3b8;
-  margin-top:12px;
-  display:block;
 }
-input,textarea,select {
+input, textarea, select {
   width:100%;
   margin-top:6px;
   padding:10px;
-  background:#020617;
-  border:1px solid #334155;
   border-radius:8px;
+  border:1px solid #334155;
+  background:#020617;
   color:#e5e7eb;
 }
+textarea { resize:vertical; }
 button {
   margin-top:16px;
+  width:100%;
   padding:12px;
-  background:#38bdf8;
-  color:#020617;
   border:none;
   border-radius:10px;
+  background:#38bdf8;
+  color:#020617;
   font-weight:700;
   cursor:pointer;
 }
 button:disabled {
-  opacity:0.6;
+  opacity:.6;
   cursor:not-allowed;
 }
 .preview {
   background:#000;
   border-radius:14px;
-  overflow:hidden;
   border:1px solid #1e293b;
+  overflow:hidden;
   position:relative;
 }
-.preview img,.preview video {
+.preview video {
   width:100%;
   height:100%;
   object-fit:contain;
+  background:#000;
 }
-
-/* ===== LOADER ===== */
 .loader {
   position:absolute;
   inset:0;
-  display:flex;
+  display:none;
   align-items:center;
   justify-content:center;
-  background:rgba(0,0,0,0.6);
-  font-weight:600;
+  background:rgba(0,0,0,.7);
   font-size:14px;
-  display:none;
+  font-weight:600;
 }
-.loader.show {
-  display:flex;
+.loader.show { display:flex; }
+.download {
+  margin-top:10px;
+  text-align:center;
+}
+.download a {
+  color:#38bdf8;
+  font-weight:600;
+  text-decoration:none;
+}
+.error {
+  margin-top:10px;
+  color:#f87171;
+  font-size:13px;
 }
 </style>
 </head>
 
 <body>
 <div class="app">
-<div class="grid">
+  <h2>Video Card Generator</h2>
 
-<div class="panel">
-  <label>User Name</label>
-  <input id="username">
+  <div class="grid">
 
-  <label>User Profile Image URL</label>
-  <input id="userProfileImage">
+    <!-- INPUT PANEL -->
+    <div class="panel">
+      <label>Main Text</label>
+      <textarea id="text">HELLO WORLD</textarea>
 
-  <label>Aspect Ratio</label>
-  <select id="ratio">
-    <option value="1:1">1:1</option>
-    <option value="9:16">9:16</option>
-    <option value="16:9" selected>16:9</option>
-  </select>
+      <label>Aspect Ratio</label>
+      <select id="ratio">
+        <option value="1:1">1:1</option>
+        <option value="9:16">9:16</option>
+        <option value="16:9" selected>16:9</option>
+      </select>
 
-  <label>Main Text</label>
-  <textarea id="text">HELLO WORLD</textarea>
+      <label>Text Color</label>
+      <input type="color" id="textColor" value="#ffffff">
 
-  <label>Text Color</label>
-  <input type="color" id="textColor" value="#ffffff">
+      <label>Background Color</label>
+      <input type="color" id="cardColor" value="#000000">
 
-  <label>Background Color</label>
-  <input type="color" id="cardColor" value="#000000">
+      <label>Music URL (public MP3)</label>
+      <input id="musicUrl" placeholder="https://...mp3">
 
-  <label>Song Title</label>
-  <input id="songTitle">
+      <label>Clip Start (seconds)</label>
+      <input id="clipStart" type="number" step="0.1" value="0">
 
-  <label>Artist</label>
-  <input id="artist">
+      <label>Clip End (seconds)</label>
+      <input id="clipEnd" type="number" step="0.1" value="5">
 
-  <label>Song Image URL</label>
-  <input id="songImage">
+      <button id="generateBtn" onclick="generateVideo()">Generate Video</button>
+      <div id="error" class="error"></div>
+    </div>
 
-  <label>Music URL</label>
-  <input id="musicUrl">
+    <!-- PREVIEW PANEL -->
+    <div class="panel">
+      <div class="preview" style="height:360px">
+        <div class="loader" id="loader">Rendering video…</div>
+        <video id="video" controls playsinline></video>
+      </div>
+      <div class="download" id="download"></div>
+    </div>
 
-  <label>Clip Start (sec)</label>
-  <input id="clipStart" type="number" step="0.1">
-
-  <label>Clip End (sec)</label>
-  <input id="clipEnd" type="number" step="0.1">
-
-  <button id="generateBtn" onclick="generate()">Generate Video</button>
-</div>
-
-<div class="panel">
-  <div class="preview" style="height:220px">
-    <img id="svgPreview">
   </div>
-
-  <br>
-
-  <div class="preview" style="height:320px">
-    <div class="loader" id="loader">Rendering video…</div>
-    <video id="videoPreview" controls playsinline></video>
-  </div>
-</div>
-
-</div>
 </div>
 
 <script>
-async function toBase64(url){
-  if(!url) return "";
-  const r = await fetch(url);
-  const b = await r.blob();
-  return new Promise(res=>{
-    const fr = new FileReader();
-    fr.onload = () => res(fr.result);
-    fr.readAsDataURL(b);
-  });
-}
-
-async function generate(){
+async function generateVideo() {
   const btn = document.getElementById("generateBtn");
   const loader = document.getElementById("loader");
-  const video = document.getElementById("videoPreview");
+  const video = document.getElementById("video");
+  const error = document.getElementById("error");
+  const download = document.getElementById("download");
+
+  error.textContent = "";
+  download.innerHTML = "";
+  video.removeAttribute("src");
 
   const start = Number(clipStart.value);
   const end = Number(clipEnd.value);
-  if(end <= start){
-    alert("Invalid clip range");
+  if (end <= start) {
+    error.textContent = "Invalid clip range";
     return;
   }
 
   btn.disabled = true;
   loader.classList.add("show");
-  video.removeAttribute("src");
 
   const payload = {
-    ratio: ratio.value,
     text: text.value,
+    ratio: ratio.value,
     textColor: textColor.value,
     cardColor: cardColor.value,
-
-    username: username.value,
-    userProfileImageBase64: await toBase64(userProfileImage.value),
-
-    songTitle: songTitle.value,
-    artist: artist.value,
-    songImageBase64: await toBase64(songImage.value),
-
     musicUrl: musicUrl.value,
     clipStart: start,
     clipEnd: end
   };
 
   try {
-    const r = await fetch("/api/generate-card", {
+    const res = await fetch("/api/generate-card", {
       method: "POST",
-      headers: {"Content-Type":"application/json"},
+      headers: { "Content-Type": "application/json" },
       body: JSON.stringify(payload)
     });
 
-    const data = await r.json();
-    if(!data.success) throw new Error("API failed");
+    const data = await res.json();
+    if (!data.success) throw new Error(data.error || "Generation failed");
 
-    // SVG preview (optional)
-    if(data.svg){
-      const svgData = "data:image/svg+xml;base64," +
-        btoa(unescape(encodeURIComponent(data.svg)));
-      svgPreview.src = svgData;
-    }
-
-    // Video preview (MP4)
     video.src = data.video;
     await video.play();
 
-  } catch(err){
-    alert(err.message);
+    const a = document.createElement("a");
+    a.href = data.video;
+    a.download = "video.mp4";
+    a.textContent = "Download video";
+    download.appendChild(a);
+
+  } catch (e) {
+    error.textContent = e.message;
   } finally {
     loader.classList.remove("show");
     btn.disabled = false;
